Fixing doulbe scrollbar and adding custom scrollbar style

--- a/src/components/FounderPart/DeckPreview/DeckPreview.css
+++ b/src/components/FounderPart/DeckPreview/DeckPreview.css
@@ -39,6 +39,7 @@
   height: 100% !important;
   margin-top: 1rem !important;
   overflow-x: auto !important;
+  overflow-y: hidden !important;
   display: flex !important;
   gap: 1rem !important;
   background-color: transparent !important;
